Name: pipes-web
Version: 1.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2013 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Pipes-Web-Library/issues
Synopsis: Deploy pipes over the web
Description: Use @pipes-web@ to deploy pipes from a server that others can
  easily install over the network.
Category: Pipes, Network
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Pipes-Web-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base             >= 4       && < 5   ,
        bytestring                     < 0.11,
        lens-family-core >= 1.0.0   && < 1.2 ,
        pipes            >= 4.1.0   && < 4.2 ,
        pipes-binary     >= 0.4.0   && < 0.5 ,
        pipes-bytestring >= 2.1.0   && < 2.2 ,
        pipes-network    >= 0.6.0   && < 0.7 ,
        transformers     >= 0.2.0.0 && < 0.5
    Exposed-Modules: Pipes.Web
    GHC-Options: -O2 -Wall
